<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:andoid="http://schemas.android.com/apk/res-auto"
    tools:context="it21026.photoapp.PhotoApp">

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        android:showAsAction="ifRoom"
        android:icon="@drawable/login"
        android:visible="true" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="200"
        android:title="@string/action_profile"
        android:showAsAction="ifRoom"
        android:icon="@drawable/profile"
        android:visible="false" />

    <item
        android:id="@+id/about"
        android:title="@string/action_about"
        android:orderInCategory="200"
        android:showAsAction="never" />

</menu>
