<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="it21026.photoapp.PhotoApp">

    <TextView android:text="@string/Welcome" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/WellcomeText"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/soft_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainActivity1"
        android:id="@+id/MainActivityTextView1"
        android:textSize="30sp"
        android:textColor="@color/soft_white"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/WellcomeText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        android:id="@+id/SearchButton"
        android:textSize="40sp"
        android:layout_marginTop="35dp"
        android:background="@drawable/photoapptheme_btn_default_holo_light"
        android:textColor="@color/blue"
        android:layout_below="@+id/MainActivityTextView1"
        android:layout_alignLeft="@+id/WellcomeText"
        android:layout_alignRight="@+id/WellcomeText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainActivity2"
        android:id="@+id/MainActivityTextView2"
        android:textSize="30sp"
        android:textColor="@color/soft_white"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/SearchButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Upload"
        android:id="@+id/UploadButton"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/photoapptheme_btn_default_holo_light"
        android:textColor="@color/blue"
        android:layout_below="@+id/MainActivityTextView4"
        android:layout_alignLeft="@+id/SearchButton"
        android:layout_alignRight="@+id/SearchButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainActivity3"
        android:id="@+id/MainActivityTextView3"
        android:textSize="30sp"
        android:textColor="@color/soft_white"
        android:layout_below="@+id/UploadButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Or"
        android:id="@+id/MainActivityTextView4"
        android:textSize="30sp"
        android:textColor="@color/soft_white"
        android:layout_below="@+id/MainActivityTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
