<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="it21026.photoapp.About">

    <TextView android:text="@string/AboutInfo" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:id="@+id/AboutInfo"
        android:textColor="@color/soft_white"
        android:layout_above="@+id/AboutName"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Creator"
        android:id="@+id/AboutName"
        android:textSize="35sp"
        android:textColor="@color/soft_white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:id="@+id/AboutEmail"
        android:textSize="35sp"
        android:textColor="@color/soft_white"
        android:layout_below="@+id/AboutName"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
