<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it21026.photoapp.UploadStep2"
    android:background="@drawable/background" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UploadStep2InstructionsText"
        android:textSize="30sp"
        android:text="@string/UploadStep2Instructions"
        android:layout_above="@+id/UploadStep2NextText"
        android:layout_alignParentLeft="true"
        android:textColor="@color/soft_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PressNext"
        android:id="@+id/UploadStep2NextText"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/soft_white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:id="@+id/UploadStep2NextButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="30sp"
        android:background="@drawable/photoapptheme_btn_default_holo_light" />


</RelativeLayout>
