<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it21026.photoapp.Upload"
    android:focusableInTouchMode="true"
    android:background="@drawable/background" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UploadInsctructionsText"
        android:textSize="30sp"
        android:text="@string/UploadInstructions"
        android:textColor="@color/soft_white"
        android:layout_above="@+id/UploadNextText"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PressNext"
        android:id="@+id/UploadNextText"
        android:textSize="30sp"
        android:textColor="@color/soft_white"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:id="@+id/UploadNextButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="30sp"
        android:background="@drawable/photoapptheme_btn_default_holo_light" />

</RelativeLayout>
